css/coffee.css
body {
    font-family: "Roboto", sans-serif;
    background-color: #3a4145;
    color: white;
}

#streamCtrl {
    z-index: 1;
    padding: 20px;
    position: fixed;
    bottom: 0;
    right: 0;
    display: flex;
    align-items: center;
}

.main-content {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 90vh;
    overflow-y: auto;
    overflow-x: hidden;
}


#versionInfo {
    font-size: x-small;
}

#volumeBar, #visualizer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
}

#visualizer {
    width: 100%;
    z-index: -1;
    opacity: 0.5;
}

[v-cloak]{
    display: none;
}

